# JinjaReportPy

./: .gitignore  README.md  demo_report.html  invoice.html  jinjareportpy.toml.example  llms.txt  main.py  pyproject.toml  quote.html
.github/: copilot-instructions.md
examples/: demo.py  test_output_config.py
jinjareportpy/: README_cli.md  README_config.md  __init__.py  __main__.py  assets.py  base.py  builder.py  cli.py  config.py  document.py  exceptions.py  filters.py  generator.py  page.py  viewer.py
jinjareportpy/formats/: __init__.py
jinjareportpy/formats/corporate/: section.css  text.html
jinjareportpy/formats/default/: header.html  section.html  table.css  table.html
jinjareportpy/formats/minimal/: footer.css  section.html  table.css  text.css
jinjareportpy/output/: default_test.html  delivery_note.html  demo_report.html  invoice.html  invoice_INV_2026_001.html  quote.html  receipt.html
jinjareportpy/templates/: base.html  delivery_note.html  invoice.html  receipt.html
ninjareportpy/: __main__.py  assets.py  base.py  config.py  filters.py  generator.py  report.py  viewer.py
ninjareportpy/formats/: __init__.py
ninjareportpy/formats/corporate/: footer.html  header.css  header.html  kpi.css  table.css
ninjareportpy/formats/default/: footer.css  section.css
ninjareportpy/formats/minimal/: footer.html  header.css  header.html  kpi.css  kpi.html
ninjareportpy/output/: delivery_note.html  demo_output.html  demo_report.html  factura.html  invoice.html  quote.html  receipt.html
ninjareportpy/reportpy/: __init__.py  __main__.py  base.py  config.py  exceptions.py  generator.py  pdf.py  sections.py  viewer.py
ninjareportpy/reportpy/formats/corporate/: footer.css  kpi.html  text.css
ninjareportpy/reportpy/formats/default/: footer.html  header.css  kpi.css  kpi.html  text.css
ninjareportpy/reportpy/formats/minimal/: section.css  table.html  text.html
ninjareportpy/reportpy/templates/: report.html
ninjareportpy/templates/: quote.html
output/: albaran.html  delivery_note.html  demo_report.html  invoice.html  presupuesto.html  quote.html  receipt.html  recibo.html
tests/: __init__.py  test_assets.py  test_generator.py  test_report.py
