[project]
name = "jinjareportpy"
version = "0.1.0"
description = "📄 JinjaReportPy - Generador programático de informes multipágina con Jinja2 y exportación PDF"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
authors = [
    {name = "JinjaReportPy Team"}
]
keywords = ["reports", "pdf", "html", "jinja2", "templates", "documents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Printing",
]
dependencies = [
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
pdf = [
    "weasyprint>=60.0",
]
pandas = [
    "pandas>=2.0.0",
]
gui = [
    "tkinterweb>=3.0.0",
]
all = [
    "weasyprint>=60.0",
    "pandas>=2.0.0",
    "tkinterweb>=3.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
]

[project.scripts]
jinjareportpy = "jinjareportpy.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jinjareportpy"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
